# yolov4-deepsort-tensorrt-api

./: build_wrn.py  build_wrn_onnx.py  common.py  generate_detections.py  initialize_wrn.py  inspect_graph.py  load_yolo_tracker.py  load_yolo_video.py  onnx_command.txt  remove_unit8.py
deepsort/: initialize_wrn.py
deepsort/test_wrn/: bboxes.npy  features-nano.npy  image.npy
tools/: inspect_graph.py
yolov4/: build_yolo.py  utils.py
yolov4/yolov4-tiny-tensorrt/: CMakeLists.txt  yololayer.cu  yolov4-tiny-video.cpp  yolov4-tiny.cpp
yolov4/yolov4-tiny-tensorrt_plugin/: CMakeLists.txt  yolov4layer.cpp
